package grpc

import (
	"context"
	ticketpb "shared-lib/protos/ticket_booking"
	"ticket-service/services"
)

type TicketController struct {
	ticketpb.UnimplementedTicketServiceServer
	service *services.TicketService
}

func NewTicketController(service *services.TicketService) *TicketController {
	return &TicketController{service: service}
}

func (c *TicketController) CreateTicket(ctx context.Context, req *ticketpb.CreateTicketRequest) (*ticketpb.CreateTicketResponse, error) {
	// TODO: Implement logic
	return &ticketpb.CreateTicketResponse{}, nil
}

func (c *TicketController) GetTicket(ctx context.Context, req *ticketpb.GetTicketRequest) (*ticketpb.GetTicketResponse, error) {
	// TODO: Implement logic
	return &ticketpb.GetTicketResponse{}, nil
}

func (c *TicketController) UpdateTicket(ctx context.Context, req *ticketpb.UpdateTicketRequest) (*ticketpb.UpdateTicketResponse, error) {
	// TODO: Implement logic
	return &ticketpb.UpdateTicketResponse{}, nil
}

func (c *TicketController) DeleteTicket(ctx context.Context, req *ticketpb.DeleteTicketRequest) (*ticketpb.DeleteTicketResponse, error) {
	// TODO: Implement logic
	return &ticketpb.DeleteTicketResponse{}, nil
}

// ... Các method khác: CancelTicket, RefundTicket, UseTicket, ValidateTicket, GetTicketsByUser, GetTicketsByEvent, GetTicketByNumber ... 